add arm section

--- a/public/index.html
+++ b/public/index.html
@@ -34,10 +34,11 @@
       <div class="layout">
         <header>
           <div class="logo">
-            <h2 style="margin: 0">
-              F<span style="color: #faff00">e<span class="sup" style="color: #fff">26</span></span>
-            </h2>
-            <!-- <img src="assets/logo2.png" height="60" alt="" srcset="" /> -->
+            <a href="./">
+              <h2 style="margin: 0">
+                F<span style="color: #faff00">e<span class="sup" style="color: #fff">26</span></span>
+              </h2>
+            </a>
           </div>
           <nav>
             <div class="nav-toggle-btn"><img src="./assets/hamburger.svg" alt="" srcset="" /></div>
@@ -53,7 +54,7 @@
         <div class="title">
           <h1>Тренажерный зал - «ЖЕЛЕЗО»</h1>
           <div class="asyncText"></div>
-          <a class="cbtn" href="tel:79687338393" style="font-size: 1.5rem"
+          <a class="cbtn" href="tel:79853433357" style="font-size: 1.5rem"
             >+7 (985) 343-33-57
             <p style="margin: 0; padding: 0; color: inherit">Открыты с 08:00 до 23:00</p>
           </a>
@@ -68,13 +69,8 @@
             <p>Спортивная фигура располагает к Вам людей; безупречное здоровье позволяет жить полной и активной жизнью; участие и победы в соревнованиях поднимают вашу самооценку и придают уверенности в себе!</p>
             <p>
               Тренажерный зал «ЖЕЛЕЗО» рад приветствовать каждого, кто ценит свое здоровье, свою красоту и свое время. Идеальная физическая форма – показатель качества вашей жизни. Настало время прислушаться к собственному организму,
-              привести в порядок мышцы, избавиться от лишнего веса, стать стройным, подтянутым, а главное – здоровым.
+              привести в порядок мышцы, избавиться от лишнего веса, стать стройным, подтянутым, а главное – здоровым
             </p>
-            <!-- <p>
-              Спорт – это дорога в счастливую, успешную жизнь. Это уникальная возможность яркими красками раскрасить серые будни, получить массу позитивных эмоций и наконец-то начать гордиться собой! Оборудование в нашем тренажерном зале
-              позволяет заниматься как начинающим любителям, так и выступающим спортсменам уровня Про! Здесь Вы всегда найдете живое общение, почерпнёте новые знания, приобщитесь к спорту и при желании сможете подготовиться к
-              соревнованиям, выступить, а быть может даже и победить, ведь каждый чемпион когда-то впервые перешагнул порог зала!
-            </p> -->
           </div>
           <div class="gallery col-lg-7">
             <div class="swiper swiper-gallery">
@@ -82,8 +78,9 @@
 
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                  <img src="./assets/gallery/1.jpg" />
+                  <img src="./assets/gallery/0.jpg" />
                 </div>
+
                 <div class="swiper-slide">
                   <img src="./assets/gallery/2.jpg" />
                 </div>
@@ -117,6 +114,9 @@
                 <div class="swiper-slide">
                   <img src="./assets/gallery/13.jpg" />
                 </div>
+                <div class="swiper-slide">
+                  <img src="./assets/gallery/1.jpg" />
+                </div>
               </div>
               <div class="nav-gallery">
                 <div class="gallery-prev">
@@ -129,6 +129,38 @@
             </div>
           </div>
         </div>
+      </div>
+      <div id="arm" class="arm section">
+        <div class="row justify-content-between">
+          <div class="gallery col-lg-7 mb-xs-3">
+            <div class="swiper swiper-arm">
+              <!-- Additional required wrapper -->
+              <div class="swiper-wrapper">
+                <!-- Slides -->
+                <div class="swiper-slide"><img src="./assets/arm/2.jpg" alt="" srcset="" /></div>
+                <div class="swiper-slide"><img src="./assets/arm/1.jpg" alt="" srcset="" /></div>
+                <div class="swiper-slide"><img src="./assets/arm/3.jpg" alt="" srcset="" /></div>
+                <div class="swiper-slide"><img src="./assets/arm/4.jpg" alt="" srcset="" /></div>
+              </div>
+              <!-- If we need pagination -->
+            </div>
+            <div class="pagination-arm"></div>
+          </div>
+          <div class="col-lg-5" style="text-align: end">
+            <h2>Армрестлинг</h2>
+            <p>
+              В армрестлинге существует большое количество ручек, которые решают различные задачи: с одними мы тренируем кисть, с другими пронатор и т.д. Но самую большую часть, конечно же, занимают ручки на пальцы
+              <!-- и это не удивительно, так
+              как в армрестлинге на эту группу мышц приходится довольно таки специфическая нагрузка -->
+            </p>
+            <p>
+              Многие упражнения из армлифтинга неподходят нам, ввиду других углов (работа в статике при раскрытии проксимальных фаланг пальцев более 90 градусов), поэтому с движением прогресса были разработанны различные типы ручек, которые
+              есть в нашем клубе
+            </p>
+          </div>
+        </div>
+
+        <!-- Slider main container -->
       </div>
       <div class="advantages section">
         <!-- <h2>Наши преимущества</h2> -->
@@ -177,22 +209,6 @@
           </div>
         </div>
       </div>
-      <div id="arm" class="arm section">
-        <h2>Единственные в городе</h2>
-        <!-- Slider main container -->
-        <div class="swiper swiper-arm">
-          <!-- Additional required wrapper -->
-          <div class="swiper-wrapper">
-            <!-- Slides -->
-            <div class="swiper-slide"><img src="./assets/arm/1.jpg" alt="" srcset="" /></div>
-            <div class="swiper-slide"><img src="./assets/arm/2.jpg" alt="" srcset="" /></div>
-            <div class="swiper-slide"><img src="./assets/arm/3.jpg" alt="" srcset="" /></div>
-            <div class="swiper-slide"><img src="./assets/arm/4.jpg" alt="" srcset="" /></div>
-          </div>
-          <!-- If we need pagination -->
-        </div>
-        <div class="pagination-arm"></div>
-      </div>
 
       <div id="cards" class="price section">
         <h2>Клубные карты</h2>
@@ -214,7 +230,7 @@
                   <div class="d-none d-lg-block col-lg-5" id="service-img"></div>
                   <div class="col-lg-7 inform-group">
                     <div class="d-flex justify-content-between align-items-start">
-                      <a class="cbtn" href="tel:79687338393" style="font-size: 1.5rem"
+                      <a class="cbtn" href="tel:79853433357" style="font-size: 1.5rem"
                         >+7 (985) 343-33-57
                         <p style="margin: 0; padding: 0; color: inherit">с 08:00 до 23:00</p>
                       </a>
@@ -229,10 +245,13 @@
                       <form>
                         <div class="input-group">
                           <span class="input-group-text" id="basic-addon1">+7</span>
-                          <input type="number" class="form-control" maxlength="1" pattern="[0-9]{10}" placeholder="987 654 43 21" aria-label="tel" aria-describedby="basic-addon1" />
+                          <input type="number" class="form-control" maxlength="1" pattern="[0-9]{10}" placeholder="987 654 32 10" aria-label="tel" aria-describedby="basic-addon1" />
                         </div>
 
                         <input class="cbtn discount" type="submit" value="Заказать звонок" />
+                        <div>
+                          <a class="policy" href="./policy.html">Политика <span>конфиденциальности</span></a>
+                        </div>
                       </form>
                     </div>
                   </div>
@@ -260,11 +279,20 @@
               <h2>Контакты</h2>
 
               <a class="contacts-info-item" href="mailto:zhelezokp@yandex.ru">zhelezokp<span>@yandex.ru</span></a>
-
+              <div>
+                <a class="vk" href="https://vk.com/zhelezokp"
+                  ><svg width="800px" height="800px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                    <title>vk</title>
+                    <path
+                      d="M25.217 22.402h-2.179c-0.825 0-1.080-0.656-2.562-2.158-1.291-1.25-1.862-1.418-2.179-1.418-0.445 0-0.572 0.127-0.572 0.741v1.968c0 0.53-0.169 0.847-1.566 0.847-2.818-0.189-5.24-1.726-6.646-3.966l-0.021-0.035c-1.632-2.027-2.835-4.47-3.43-7.142l-0.022-0.117c0-0.317 0.127-0.614 0.741-0.614h2.179c0.55 0 0.762 0.254 0.975 0.846 1.078 3.112 2.878 5.842 3.619 5.842 0.275 0 0.402-0.127 0.402-0.825v-3.219c-0.085-1.482-0.868-1.608-0.868-2.137 0.009-0.283 0.241-0.509 0.525-0.509 0.009 0 0.017 0 0.026 0.001l-0.001-0h3.429c0.466 0 0.635 0.254 0.635 0.804v4.34c0 0.465 0.212 0.635 0.339 0.635 0.275 0 0.509-0.17 1.016-0.677 1.054-1.287 1.955-2.759 2.642-4.346l0.046-0.12c0.145-0.363 0.493-0.615 0.9-0.615 0.019 0 0.037 0.001 0.056 0.002l-0.003-0h2.179c0.656 0 0.805 0.337 0.656 0.804-0.874 1.925-1.856 3.579-2.994 5.111l0.052-0.074c-0.232 0.381-0.317 0.55 0 0.975 0.232 0.317 0.995 0.973 1.503 1.566 0.735 0.727 1.351 1.573 1.816 2.507l0.025 0.055c0.212 0.612-0.106 0.93-0.72 0.93zM20.604 1.004h-9.207c-8.403 0-10.392 1.989-10.392 10.392v9.207c0 8.403 1.989 10.392 10.392 10.392h9.207c8.403 0 10.392-1.989 10.392-10.392v-9.207c0-8.403-2.011-10.392-10.392-10.392z"
+                    ></path></svg
+                  >zhelezokp</a
+                >
+              </div>
               <a class="contacts-info-item" target="_blank" href="https://yandex.ru/maps/21641/lobnja/?from=api-maps&ll=37.476757%2C56.016048&mode=routes&origin=jsapi_2_1_79&rtext=~56.016048%2C37.476757&rtt=pd&ruri=~&z=16"
                 >г. Лобня, улица Некрасова, 9Г</a
               >
-              <a class="cbtn" href="tel:79687338393" style="font-size: 1.5rem"
+              <a class="cbtn" href="tel:79853433357" style="font-size: 1.5rem"
                 >+7 (985) 343-33-57
                 <p style="margin: 0; padding: 0; color: inherit">Открыты с 08:00 до 23:00</p>
               </a>
