--- a/public/policy.html
+++ b/public/policy.html
@@ -11,15 +11,20 @@
     <div class="preview" style="background: #000">
       <div class="layout">
         <header>
-          <div class="logo"><img src="assets/logo2.png" height="60" alt="" srcset="" /></div>
+          <div class="logo">
+            <a href="./">
+              <h2 style="margin: 0">
+                F<span style="color: #faff00">e<span class="sup" style="color: #fff">26</span></span>
+              </h2>
+            </a>
+          </div>
           <nav>
             <ul>
-              <li><a class="nav-text" href="#">О клубе</a></li>
-              <li><a class="nav-text" href="#">Услуги</a></li>
-              <li><a class="nav-text" href="#">Фотогалерея</a></li>
-              <li><a class="nav-text" href="#">Прайс-лист</a></li>
-              <li><a class="nav-text" href="#">Тренеры</a></li>
-              <li><a class="nav-text" href="#">Контакты</a></li>
+              <li><a class="nav-text" href="./#about">О клубе</a></li>
+              <li><a class="nav-text" href="./#cards">Клубные карты</a></li>
+              <li><a class="nav-text" href="./#trainers">Тренерский состав</a></li>
+              <li><a class="nav-text" href="./#individual">Тренировки</a></li>
+              <li><a class="nav-text" href="./#contacts">Контакты</a></li>
             </ul>
           </nav>
         </header>
